--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 </div>
     
     </body>
-    <h6>Originally published on Mousse 36 (December 2012–January 2013)</h6>
+    <a href="https://www.moussemagazine.it/magazine/anthony-huberman-haim-steinbach-2012/"><h6>Originally published on Mousse 36 (December 2012–January 2013)</h6></a>
   </html>
 </div>
 
